--- a/public/index.html
+++ b/public/index.html
@@ -40,7 +40,7 @@
       To begin the development, run `npm start` or `yarn start`.
       To create a production bundle, use `npm run build` or `yarn build`.
     -->
-    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/en_US/sdk.js#xfbml=1&version=v14.0&appId=1458827731248601&autoLogAppEvents=1" nonce="ZRbHFnNR"></script>
-
+    <div id="fb-root"></div>
+    <script async defer crossorigin="anonymous" src="https://connect.facebook.net/es_ES/sdk.js#xfbml=1&version=v14.0&appId=1458827731248601&autoLogAppEvents=1" nonce="gnHCLcuu"></script>
   </body>
 </html>
